# axum-tutorial

./: Cargo.toml
src/: error.rs  index.html  log.rs  main.rs  model.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_ticket.rs
tests/: quick_dev.rs
