[package]
name = "axum-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.10"
