[package]
name = "axum-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
axum = { version = "0.7.5", features = ["macros"] }
lazy-regex = "3.3.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.9.0"
strum_macros = "0.26.4"
tokio = { version = "1.40.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.10"
